--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ set -g status-position bottom
 set -g status-bg colour237
 set -g status-fg colour137
 set -g status-left '#[fg=colour197]#(~/.zsh/tmux/internet_info.sh) '
-set -g status-right '#[fg=colour81]#(~/.zsh/tmux/now_playing.sh) #(~/.zsh/tmux/battery.sh) #[fg=colour255,bg=colour241,bold] %a %d-%m #[fg=colour255,bg=colour241,bold] %H:%M:%S #[fg=colour165]#[bg=default] #(whoami)@#H'
+set -g status-right '#[fg=colour255,bg=colour241,bold] %a %d-%m #[fg=colour255,bg=colour241,bold] %H:%M:%S #[fg=colour165]#[bg=default] #U@#H'
 set -g status-right-length 100
 set -g status-left-length 70
 
@@ -52,3 +52,4 @@ set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
