--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,9 +6,6 @@ bind C-x send-prefix
 # force a reload of the config file
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-# iTerm color profile
-set -g default-terminal "xterm-256color"
-
 # Scroll history
 set-option -g history-limit 20000
 
@@ -18,11 +15,18 @@ setw -g alternate-screen on
 # Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer access.
 set -s escape-time 50
 
+# use vi style keybindings
+setw -g mode-keys vi
+
 # Mouse support
 set -g mouse on
 
-# use vi style keybindings
-# setw -g mode-keys vi
+# XTerm integration -----------------------------------------------------------
+# iTerm color profile
+set -g default-terminal "xterm-256color"
+
+# Enable scroll support
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # xterm-style function key sequences
 # setw -g xterm-keys on
@@ -34,7 +38,7 @@ set -g status-interval 1
 set -g status-position bottom
 set -g status-bg colour237
 set -g status-fg colour137
-set -g status-left '#[fg=colour197]#(~/.zsh/tmux/internet_info.sh) '
+set -g status-left '#[fg=colour197]#($HOME/.scripts/internet_info.sh) '
 set -g status-right '#[fg=colour255,bg=colour241,bold] %a %d-%m #[fg=colour255,bg=colour241,bold] %H:%M:%S #[fg=colour165]#[bg=default] #U@#H'
 set -g status-right-length 100
 set -g status-left-length 70
