Updates weechat conf

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -247,6 +247,7 @@ save_config_on_unload = on
 
 [bar]
 activetitle.color_bg = 31
+activetitle.color_bg_inactive = default
 activetitle.color_delim = default
 activetitle.color_fg = white
 activetitle.conditions = "${active}"
@@ -261,6 +262,7 @@ activetitle.size = 1
 activetitle.size_max = 0
 activetitle.type = window
 buffers.color_bg = default
+buffers.color_bg_inactive = default
 buffers.color_delim = default
 buffers.color_fg = default
 buffers.conditions = ""
@@ -275,6 +277,7 @@ buffers.size = 0
 buffers.size_max = 25
 buffers.type = root
 buflist.color_bg = default
+buflist.color_bg_inactive = default
 buflist.color_delim = default
 buflist.color_fg = default
 buflist.conditions = ""
@@ -289,6 +292,7 @@ buflist.size = 18
 buflist.size_max = 30
 buflist.type = root
 fset.color_bg = default
+fset.color_bg_inactive = default
 fset.color_delim = cyan
 fset.color_fg = default
 fset.conditions = "${buffer.full_name} == fset.fset"
@@ -303,6 +307,7 @@ fset.size = 3
 fset.size_max = 3
 fset.type = window
 highmon.color_bg = default
+highmon.color_bg_inactive = default
 highmon.color_delim = cyan
 highmon.color_fg = default
 highmon.conditions = ""
@@ -317,6 +322,7 @@ highmon.size = 0
 highmon.size_max = 0
 highmon.type = root
 input.color_bg = black
+input.color_bg_inactive = default
 input.color_delim = default
 input.color_fg = default
 input.conditions = ""
@@ -331,6 +337,7 @@ input.size = 1
 input.size_max = 0
 input.type = root
 isetbar.color_bg = default
+isetbar.color_bg_inactive = default
 isetbar.color_delim = cyan
 isetbar.color_fg = default
 isetbar.conditions = ""
@@ -345,6 +352,7 @@ isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
 nicklist.color_bg = default
+nicklist.color_bg_inactive = default
 nicklist.color_delim = cyan
 nicklist.color_fg = 229
 nicklist.conditions = "${nicklist} && ${window.number} == 1"
@@ -359,6 +367,7 @@ nicklist.size = 14
 nicklist.size_max = 14
 nicklist.type = window
 status.color_bg = 234
+status.color_bg_inactive = default
 status.color_delim = default
 status.color_fg = 31
 status.conditions = ""
@@ -373,6 +382,7 @@ status.size = 1
 status.size_max = 0
 status.type = root
 title.color_bg = 31
+title.color_bg_inactive = default
 title.color_delim = cyan
 title.color_fg = black
 title.conditions = "${inactive}"
@@ -387,6 +397,7 @@ title.size = 1
 title.size_max = 0
 title.type = window
 znc_commands.color_bg = default
+znc_commands.color_bg_inactive = default
 znc_commands.color_delim = default
 znc_commands.color_fg = default
 znc_commands.conditions = "${buffer.full_name} =~ \.*status$ && ${window.number} == 1"
