--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,10 @@ bind C-x send-prefix
 # force a reload of the config file
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Scroll history
 set-option -g history-limit 20000
 
